WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
275229
[WebGPU] renderCommandEncoderWithDescriptor can fail if depthStencil texture is nil
https://bugs.webkit.org/show_bug.cgi?id=275229
Summary
[WebGPU] renderCommandEncoderWithDescriptor can fail if depthStencil texture ...
Mike Wyrzykowski
Reported
2024-06-06 15:37:17 PDT
[WebGPU] renderCommandEncoderWithDescriptor can fail if depthStencil texture is nil
Attachments
Add attachment
proposed patch, testcase, etc.
Mike Wyrzykowski
Comment 1
2024-06-06 15:37:27 PDT
radar://129354666
Mike Wyrzykowski
Comment 2
2024-06-06 15:45:13 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/29598
EWS
Comment 3
2024-06-07 02:02:03 PDT
Committed
279802@main
(49d05e7c47e4): <
https://commits.webkit.org/279802@main
> Reviewed commits have been landed. Closing PR #29598 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug