[WebGPU] renderCommandEncoderWithDescriptor can fail if depthStencil texture is nil https://bugs.webkit.org/show_bug.cgi?id=275229 <radar://129354666>

Reviewed by Dan Glastonbury.

If there are zero color textures and the depth stencil texture is destroyed,
the render pass will be invalid, so create it invalid initially.

* Source/WebGPU/WebGPU/CommandEncoder.mm:
(WebGPU::CommandEncoder::beginRenderPass):

Canonical link: https://commits.webkit.org/279802@main